--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
+    "leaflet": "^1.9.4",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "styled-components": "^6.1.13",
     "zustand": "^5.0.0-rc.2"
   },
